# DotFiles

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md
.old_configs/bash/: .bashrc  aliases.sh  setup.sh
.old_configs/ranger/: rc.conf
bash/: .bash_aliases  .bash_profile  .bashrc  .profile  aliases.sh  functions.sh  main.sh  paths.sh  prompt.sh  setup.sh
bash/bash_prompts/custom/: custom_prompt.sh
bash/bash_prompts/default/: default_prompt.sh
bash/bash_prompts/powerline/: powerline.sh
bash/bash_prompts/starship/: starship_prompt.sh
bash/bash_prompts/synth/: synth_prompt.sh
bash/ubuntu/: .bash_aliases  .bash_profile  .bashrc  .profile
bat/: setup.sh
clang/: .clang-format.for-cpp  .clang-formatC  .clangd
clang-format/: .clang-format
git/: .gitconfig  InitConfig.py  aliases  commit_template_message.txt  setup.sh
git/data/: aliases  commit_template_message
git/src/: InitConfig.py  config.json  exceptions.py  git_config.toml  main.py  utils.py
git/src/misc/: exceptions.py  utils.py
makefiles/asm/32bit/: Makefile  hello.asm
makefiles/asm/64bit/: Makefile  hello.asm
makefiles/c/big-project/: Makefile
makefiles/c/medium-project/: Makefile
neofetch/: acenoster.conf  config.conf  papirus.conf  setup.sh
neofetch/bejkon2/: config.conf  logo1  logo2  logo3  logo4  logo5
nvim/: init.vim
nvim/astronvim/: colorscheme.lua  diagnostics.lua  lazy.lua  mappings.lua  options.lua  updater.lua
nvim/config/: init.lua  lazy-lock.json
nvim/legacy_nvim/: lazy.lua  options.lua  updater.lua
other_configs/: .clang-format  .clangd  .inputrc  Makefile-py-project  pyproject.toml
ranger/: scope.sh
scripts/: archpwd.sh  concat_img.sh  getwallpaper.sh  printerrno.pl  save_github.py  setup.sh  show_all_colors_zsh.sh  switch_sound.sh  weather.sh
tmux/: .tmux.conf  setup.sh
tmux/.tmux/: .tmux.conf  .tmux.conf.local
tools/: archpwd.sh  getwallpaper.sh  weather.sh
tty/alacritty/: alacritty.toml
vim/: .ideavimrc  .vimrc  setup.sh
vim/syntax/: python_fold_indent.vim
zsh/: .p10k.zsh  .zshrc  aliases.sh  aliases.zsh  functions.sh  functions.zsh  main.sh  main.zsh  paths.sh  paths.zsh  setup.sh  setup.zsh  setup_oh_my_zsh.sh
(+40 files in other folders)
